20220202:completed analysis.py

--- a/userInterface/templates/index.html
+++ b/userInterface/templates/index.html
@@ -40,23 +40,23 @@ Main
       <table>
 	<tr>
 	  <th style="width:130px">Sensor</th>
-	  <th style="width:130px">Current level</th>
+	  <th style="width:130px">Current level <br>(1: Full, 0: Empty)</th>
 	</tr>
 	<tr>
 	  <td>Sensor 1</td>
-	  <td style="text-align:center">0</td>
+	  <td style="text-align:center">{{sensor1}}</td>
 	</tr>
 	<tr>
 	  <td>Sensor 2</td>
-	  <td style="text-align:center">0</td>
+	  <td style="text-align:center">{{sensor2}}</td>
 	</tr>
 	<tr>
 	  <td>Sensor 3</td>
-	  <td style="text-align:center">0</td>
+	  <td style="text-align:center">{{sensor3}}</td>
 	</tr>
 	<tr>
 	  <td>Sensor 4</td>
-	  <td style="text-align:center">0</td>
+	  <td style="text-align:center">{{sensor4}}</td>
 	</tr>
       </table>
     </div>
