--- a/userInterface/templates/index.html
+++ b/userInterface/templates/index.html
@@ -27,6 +27,7 @@ Main
 	  <!-- links -->
 	  <p style="margin-top:20px">You can <a href="{{ url_for('add_record') }}">submit a new record</a>.</p>
 	  <p style="margin-top:20px">You can <a href="{{ url_for( 'select_record', letters='AF' ) }}">select a record for editing</a>.</p>
+	  <p style="margin-top:20px">You can <a href="{{ url_for( 'usage' ) }}">calculate usage over time</a>.</p>
 
     </div>
   </div>
